k8s/_init/10-storage.yaml
##### STORAGE ##################################################################
#
# kubectl config set-context --current --namespace=default
#
# Adds an endpoint and service to persistent storage in each core namespace
#
################################################################################

---
apiVersion: v1
kind: Endpoints
metadata:
  name: glusterfs-cluster
  namespace: default
  labels:
    app.kubernetes.io/name: glusterfs-cluster
    app.kubernetes.io/part-of: default
  annotations:
    a8r.io/description: "Gluster dedicated storage volumes [glass_bulk, glass_cfg]"
    a8r.io/owner: "@faangbait"
    a8r.io/repository: "https://github.com/faangbait/antennae"
subsets:
  - addresses:
    - ip: 10.0.0.254
      nodeName: node1
    - ip: 10.0.0.253
      nodeName: node2
    - ip: 10.0.0.252
      nodeName: node3
    ports:
      - port: 42
---
apiVersion: v1
kind: Service
metadata:
  name: glusterfs-cluster
  namespace: default
  labels:
    app.kubernetes.io/name: glusterfs-service
    app.kubernetes.io/part-of: default
  annotations:
    a8r.io/description: "Gluster dedicated storage volumes [glass_bulk, glass_cfg]"
    a8r.io/owner: "@faangbait"
    a8r.io/repository: "https://github.com/faangbait/antennae"
spec:
  ports:
  - port: 42
---
apiVersion: v1
kind: Endpoints
metadata:
  name: glusterfs-cluster
  namespace: gitlab
  labels:
    app.kubernetes.io/name: glusterfs-cluster
    app.kubernetes.io/part-of: default
  annotations:
    a8r.io/description: "Gluster dedicated storage volumes [glass_bulk, glass_cfg]"
    a8r.io/owner: "@faangbait"
    a8r.io/repository: "https://github.com/faangbait/antennae"
subsets:
  - addresses:
    - ip: 10.0.0.254
      nodeName: node1
    - ip: 10.0.0.253
      nodeName: node2
    - ip: 10.0.0.252
      nodeName: node3
    ports:
      - port: 42
---
apiVersion: v1
kind: Service
metadata:
  name: glusterfs-cluster
  namespace: gitlab
  labels:
    app.kubernetes.io/name: glusterfs-service
    app.kubernetes.io/part-of: default
  annotations:
    a8r.io/description: "Gluster dedicated storage volumes [glass_bulk, glass_cfg]"
    a8r.io/owner: "@faangbait"
    a8r.io/repository: "https://github.com/faangbait/antennae"
spec:
  ports:
  - port: 42
---
apiVersion: v1
kind: Endpoints
metadata:
  name: glusterfs-cluster
  namespace: archives
  labels:
    app.kubernetes.io/name: glusterfs-cluster
    app.kubernetes.io/part-of: default
  annotations:
    a8r.io/description: "Gluster dedicated storage volumes [glass_bulk, glass_cfg]"
    a8r.io/owner: "@faangbait"
    a8r.io/repository: "https://github.com/faangbait/antennae"
subsets:
  - addresses:
    - ip: 10.0.0.254
      nodeName: node1
    - ip: 10.0.0.253
      nodeName: node2
    - ip: 10.0.0.252
      nodeName: node3
    ports:
      - port: 42
---
apiVersion: v1
kind: Service
metadata:
  name: glusterfs-cluster
  namespace: archives
  labels:
    app.kubernetes.io/name: glusterfs-service
    app.kubernetes.io/part-of: default
  annotations:
    a8r.io/description: "Gluster dedicated storage volumes [glass_bulk, glass_cfg]"
    a8r.io/owner: "@faangbait"
    a8r.io/repository: "https://github.com/faangbait/antennae"
spec:
  ports:
  - port: 42
---
apiVersion: v1
kind: Endpoints
metadata:
  name: glusterfs-cluster
  namespace: antennae
  labels:
    app.kubernetes.io/name: glusterfs-cluster
    app.kubernetes.io/part-of: default
  annotations:
    a8r.io/description: "Gluster dedicated storage volumes [glass_bulk, glass_cfg]"
    a8r.io/owner: "@faangbait"
    a8r.io/repository: "https://github.com/faangbait/antennae"
subsets:
  - addresses:
    - ip: 10.0.0.254
      nodeName: node1
    - ip: 10.0.0.253
      nodeName: node2
    - ip: 10.0.0.252
      nodeName: node3
    ports:
      - port: 42
---
apiVersion: v1
kind: Service
metadata:
  name: glusterfs-cluster
  namespace: antennae
  labels:
    app.kubernetes.io/name: glusterfs-service
    app.kubernetes.io/part-of: default
  annotations:
    a8r.io/description: "Gluster dedicated storage volumes [glass_bulk, glass_cfg]"
    a8r.io/owner: "@faangbait"
    a8r.io/repository: "https://github.com/faangbait/antennae"
spec:
  ports:
  - port: 42
---
apiVersion: v1
kind: Endpoints
metadata:
  name: glusterfs-cluster
  namespace: vault
  labels:
    app.kubernetes.io/name: glusterfs-cluster
    app.kubernetes.io/part-of: default
  annotations:
    a8r.io/description: "Gluster dedicated storage volumes [glass_bulk, glass_cfg]"
    a8r.io/owner: "@faangbait"
    a8r.io/repository: "https://github.com/faangbait/antennae"
subsets:
  - addresses:
    - ip: 10.0.0.254
      nodeName: node1
    - ip: 10.0.0.253
      nodeName: node2
    - ip: 10.0.0.252
      nodeName: node3
    ports:
      - port: 42
---
apiVersion: v1
kind: Service
metadata:
  name: glusterfs-cluster
  namespace: vault
  labels:
    app.kubernetes.io/name: glusterfs-service
    app.kubernetes.io/part-of: default
  annotations:
    a8r.io/description: "Gluster dedicated storage volumes [glass_bulk, glass_cfg]"
    a8r.io/owner: "@faangbait"
    a8r.io/repository: "https://github.com/faangbait/antennae"
spec:
  ports:
  - port: 42
---
apiVersion: v1
kind: Endpoints
metadata:
  name: glusterfs-cluster
  namespace: home
  labels:
    app.kubernetes.io/name: glusterfs-cluster
    app.kubernetes.io/part-of: default
  annotations:
    a8r.io/description: "Gluster dedicated storage volumes [glass_bulk, glass_cfg]"
    a8r.io/owner: "@faangbait"
    a8r.io/repository: "https://github.com/faangbait/antennae"
subsets:
  - addresses:
    - ip: 10.0.0.254
      nodeName: node1
    - ip: 10.0.0.253
      nodeName: node2
    - ip: 10.0.0.252
      nodeName: node3
    ports:
      - port: 42
---
apiVersion: v1
kind: Service
metadata:
  name: glusterfs-cluster
  namespace: home
  labels:
    app.kubernetes.io/name: glusterfs-service
    app.kubernetes.io/part-of: default
  annotations:
    a8r.io/description: "Gluster dedicated storage volumes [glass_bulk, glass_cfg]"
    a8r.io/owner: "@faangbait"
    a8r.io/repository: "https://github.com/faangbait/antennae"
spec:
  ports:
  - port: 42
---
apiVersion: v1
kind: Endpoints
metadata:
  name: glusterfs-cluster
  namespace: news
  labels:
    app.kubernetes.io/name: glusterfs-cluster
    app.kubernetes.io/part-of: default
  annotations:
    a8r.io/description: "Gluster dedicated storage volumes [glass_bulk, glass_cfg]"
    a8r.io/owner: "@faangbait"
    a8r.io/repository: "https://github.com/faangbait/antennae"
subsets:
  - addresses:
    - ip: 10.0.0.254
      nodeName: node1
    - ip: 10.0.0.253
      nodeName: node2
    - ip: 10.0.0.252
      nodeName: node3
    ports:
      - port: 42
---
apiVersion: v1
kind: Service
metadata:
  name: glusterfs-cluster
  namespace: news
  labels:
    app.kubernetes.io/name: glusterfs-service
    app.kubernetes.io/part-of: default
  annotations:
    a8r.io/description: "Gluster dedicated storage volumes [glass_bulk, glass_cfg]"
    a8r.io/owner: "@faangbait"
    a8r.io/repository: "https://github.com/faangbait/antennae"
spec:
  ports:
  - port: 42
---
apiVersion: v1
kind: Endpoints
metadata:
  name: glusterfs-cluster
  namespace: public
  labels:
    app.kubernetes.io/name: glusterfs-cluster
    app.kubernetes.io/part-of: default
  annotations:
    a8r.io/description: "Gluster dedicated storage volumes [glass_bulk, glass_cfg]"
    a8r.io/owner: "@faangbait"
    a8r.io/repository: "https://github.com/faangbait/antennae"
subsets:
  - addresses:
    - ip: 10.0.0.254
      nodeName: node1
    - ip: 10.0.0.253
      nodeName: node2
    - ip: 10.0.0.252
      nodeName: node3
    ports:
      - port: 42
---
apiVersion: v1
kind: Service
metadata:
  name: glusterfs-cluster
  namespace: public
  labels:
    app.kubernetes.io/name: glusterfs-service
    app.kubernetes.io/part-of: default
  annotations:
    a8r.io/description: "Gluster dedicated storage volumes [glass_bulk, glass_cfg]"
    a8r.io/owner: "@faangbait"
    a8r.io/repository: "https://github.com/faangbait/antennae"
spec:
  ports:
  - port: 42
