k8s/_init/20-authentication.yaml
##### HELM #####################################################################
#
# kubectl config set-context --current --namespace=default
#
# helm repo add bitnami https://charts.bitnami.com/bitnami
# helm install auth-redis --set sentinel.enabled=true --set auth.enabled=false --set auth.sentinel=false --set master.persistence.enabled=false --set replica.persistence.enabled=false bitnami/redis
#
##### AUTH #####################################################################
---
# Create Forward Auth Middleware
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: secure-auth
  namespace: default
  labels:
    app.kubernetes.io/name: secure-auth
    app.kubernetes.io/part-of: core
  annotations:
    a8r.io/description: "Provides Traefik middleware for secure authentication."
    a8r.io/owner: "@faangbait"
    a8r.io/repository: "https://github.com/faangbait/antennae"
spec:
  forwardAuth:
    address: http://auth-service.default:9091/api/verify?rd=https://auth.madeof.glass
    trustForwardHeader: true
    authResponseHeaders:
      - "Remote-User"
      - "Remote-Groups"
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: secure-auth
  namespace: gitlab
  labels:
    app.kubernetes.io/name: secure-auth
    app.kubernetes.io/part-of: core
  annotations:
    a8r.io/description: "Provides Traefik middleware for secure authentication."
    a8r.io/owner: "@faangbait"
    a8r.io/repository: "https://github.com/faangbait/antennae"
spec:
  forwardAuth:
    address: http://auth-service.default:9091/api/verify?rd=https://auth.madeof.glass
    trustForwardHeader: true
    authResponseHeaders:
      - "Remote-User"
      - "Remote-Groups"
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: secure-auth
  namespace: antennae
  labels:
    app.kubernetes.io/name: secure-auth
    app.kubernetes.io/part-of: core
  annotations:
    a8r.io/description: "Provides Traefik middleware for secure authentication."
    a8r.io/owner: "@faangbait"
    a8r.io/repository: "https://github.com/faangbait/antennae"
spec:
  forwardAuth:
    address: http://auth-service.default:9091/api/verify?rd=https://auth.madeof.glass
    trustForwardHeader: true
    authResponseHeaders:
      - "Remote-User"
      - "Remote-Groups"
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: secure-auth
  namespace: archives
  labels:
    app.kubernetes.io/name: secure-auth
    app.kubernetes.io/part-of: core
  annotations:
    a8r.io/description: "Provides Traefik middleware for secure authentication."
    a8r.io/owner: "@faangbait"
    a8r.io/repository: "https://github.com/faangbait/antennae"
spec:
  forwardAuth:
    address: http://auth-service.default:9091/api/verify?rd=https://auth.madeof.glass
    trustForwardHeader: true
    authResponseHeaders:
      - "Remote-User"
      - "Remote-Groups"
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: secure-auth
  namespace: vault
  labels:
    app.kubernetes.io/name: secure-auth
    app.kubernetes.io/part-of: core
  annotations:
    a8r.io/description: "Provides Traefik middleware for secure authentication."
    a8r.io/owner: "@faangbait"
    a8r.io/repository: "https://github.com/faangbait/antennae"
spec:
  forwardAuth:
    address: http://auth-service.default:9091/api/verify?rd=https://auth.madeof.glass
    trustForwardHeader: true
    authResponseHeaders:
      - "Remote-User"
      - "Remote-Groups"
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: secure-auth
  namespace: home
  labels:
    app.kubernetes.io/name: secure-auth
    app.kubernetes.io/part-of: core
  annotations:
    a8r.io/description: "Provides Traefik middleware for secure authentication."
    a8r.io/owner: "@faangbait"
    a8r.io/repository: "https://github.com/faangbait/antennae"
spec:
  forwardAuth:
    address: http://auth-service.default:9091/api/verify?rd=https://auth.madeof.glass
    trustForwardHeader: true
    authResponseHeaders:
      - "Remote-User"
      - "Remote-Groups"
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: secure-auth
  namespace: news
  labels:
    app.kubernetes.io/name: secure-auth
    app.kubernetes.io/part-of: core
  annotations:
    a8r.io/description: "Provides Traefik middleware for secure authentication."
    a8r.io/owner: "@faangbait"
    a8r.io/repository: "https://github.com/faangbait/antennae"
spec:
  forwardAuth:
    address: http://auth-service.default:9091/api/verify?rd=https://auth.madeof.glass
    trustForwardHeader: true
    authResponseHeaders:
      - "Remote-User"
      - "Remote-Groups"
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: secure-auth
  namespace: public
  labels:
    app.kubernetes.io/name: secure-auth
    app.kubernetes.io/part-of: core
  annotations:
    a8r.io/description: "Provides Traefik middleware for secure authentication."
    a8r.io/owner: "@faangbait"
    a8r.io/repository: "https://github.com/faangbait/antennae"
spec:
  forwardAuth:
    address: http://auth-service.default:9091/api/verify?rd=https://auth.madeof.glass
    trustForwardHeader: true
    authResponseHeaders:
      - "Remote-User"
      - "Remote-Groups"
---
# Create Authelia Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-web
  namespace: default
  labels:
    app.kubernetes.io/name: auth-deployment
    app.kubernetes.io/part-of: auth
  annotations:
    a8r.io/description: "Deploys Authelia into the Default namespace."
    a8r.io/owner: "@faangbait"
    a8r.io/repository: "https://github.com/faangbait/antennae"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: auth-web
  template:
    metadata:
      labels:
        app.kubernetes.io/name: auth-web
        app.kubernetes.io/part-of: auth
    spec:
      containers:
      - name: auth-web
        image: docker.io/authelia/authelia
        command: ["authelia", "--config=/configmap/configuration.yml"]
        volumeMounts:
        - mountPath: /config
          name: cfg-auth
          subPath: "cfg/authelia"
        - mountPath: /configmap
          name: auth-configmap
        resources:
          requests:
            memory: 1Gi
            cpu: "2"
          limits:
            memory: 2Gi # Probably too high
            cpu: "2"
      volumes:
        - name: cfg-auth
          glusterfs:
            endpoints: glusterfs-cluster
            path: glass_cfg
            readOnly: false
        - name: auth-configmap
          configMap:
            name: auth-configmap
            items:
            - key: config
              path: configuration.yml
            - key: users
              path: users.yml

---
# Create Authelia Service
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: default
  labels:
    app.kubernetes.io/name: auth-service
    app.kubernetes.io/part-of: auth
  annotations:
    a8r.io/description: "Creates the Authelia service in the default namespace."
    a8r.io/owner: "@faangbait"
    a8r.io/repository: "https://github.com/faangbait/antennae"
spec:
  selector:
    app.kubernetes.io/name: auth-web
  internalTrafficPolicy: Cluster
  ports:
    - port: 9091
      name: auth-service
---
# Create Authelia IngressRoute
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: auth-ingress
  namespace: default
  labels:
    app.kubernetes.io/name: auth-ingress
    app.kubernetes.io/part-of: auth
  annotations:
    a8r.io/description: "Provides Traefik ingress for secure authentication."
    a8r.io/owner: "@faangbait"
    a8r.io/repository: "https://github.com/faangbait/antennae"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`auth.madeof.glass`)
      kind: Rule
      # middlewares:
      # - name: secure-auth
      #   namespace: default
      services:
        - name: auth-service
          port: 9091
  tls:
    certResolver: letsencrypt
